new version with vulnerable libraries updated